Finish static pages

--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,2 +1,7 @@
-<h1>StaticPages#help</h1>
-<p>Find me in app/views/static_pages/help.html.erb</p>
+<% provide(:title, 'Ajutor') %>
+<h1>Ajutor</h1>
+<p>
+  Aceasta este pagina home a proiectului - 
+  <a href="http://railstutorial.org/">Aplicatie de gestiune</a>
+   - Ruby on Rails.
+</p>
