--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,7 @@
-<h1>StaticPages#home</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
+<% provide(:title, 'Home') %>
+<h1>Gestiune RoR</h1>
+<p>
+  Aceasta este pagina home a proiectului - 
+  <a href="http://railstutorial.org/">Aplicatie de gestiune</a>
+   - Ruby on Rails.
+</p>
