Finish layout and routes

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -5,7 +5,7 @@
     <title>Aplicatie de gestiune - Ruby on Rails | <%= yield(:title) %></title>
   </head>
   <body>
-<h1>Despre noi</h1>
+<h1>Despre noi2</h1>
 <p>
   Primul nostru proiect folosind Ruby on Rails.
 </p>
